--- a/numpytest.ipynb
+++ b/numpytest.ipynb
@@ -21,6 +21,79 @@
     "print(np.__version__)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d8e5e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 0, 1, 1, 1, 1], dtype=int64), array([3, 4, 0, 1, 2, 3], dtype=int64))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([[1,2,3,4,5], [6,7,8,9,0]])\n",
+    "index = np.where(arr>3)\n",
+    "print(index[])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "afd1db01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n",
+      "59\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.random.default_rng()\n",
+    "\n",
+    "print(a.integers(1,191))\n",
+    "\n",
+    "\n",
+    "print(a.integers (1,190))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0cc00400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   a  b  c\n",
+      "0  1  2  3\n",
+      "1  3  2  3\n",
+      "2  4  2  3\n",
+      "3  5  2  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "datas = {'a':[1,3,4,5], 'b':2, 'c':3}\n",
+    "sc = pd.DataFrame(datas)\n",
+    "print(sc)"
+   ]
   }
  ],
  "metadata": {
