--- a/numpytest.ipynb
+++ b/numpytest.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "arr = np.array([[1,2,3,4,5], [6,7,8,9,0]])\n",
     "index = np.where(arr>3)\n",
-    "print(index[])"
+    "print(index)"
    ]
   },
   {
